--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,16 @@
-# TODO: Verificar el puerto de la base de datos de postgresql. No es 3306
-spring.datasource.url=jdbc:postgresql://localhost:3306/db_product?createDatabaseIfNotExist=true
-spring.datasource.username=root
+spring.datasource.url=jdbc:postgresql://localhost:6543/sistemaClubDeportivo
+spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
-
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql = true
 
-server.port=8082
+# Variable de entorno
+server.port=8000
+
+# Hibernate Configuration
+hibernate.dialect= org.hibernate.dialect.H2Dialect
+hibernate.hbm2ddl.auto=create-drop
+hibernate.ejb.naming_strategy= org.hibernate.cfg.ImprovedNamingStrategy
+hibernate.show_sql=false
+hibernate.format_sql=true
